[metadata]
name = PythonInterfaceOOP
version = 1.0.0
author = Ionut Cristian Arsene, Cevat Batuhan Tolon
author_email = cevat.batuhan.tolon@cern.ch
url = ""
description = O2-DQ Python Based User Interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CLI, PWG-DQ, O2-DQ, autocomplete
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    argcomplete==1.8.1

[options.extras_require]
dev = 
    yapf==0.32.0
    flake8==4.0.1

[options.package_data]
example = PythonInterfaceOOP/configs.*json, *.txt, *.sh
* = README.md